@@ -5,7 +5,6 @@ namespace FlatFileParserUnitTests.Models
     public class PrimitiveTypesModel
     {
         public bool boolTest { get; set; }
-        public byte byteTest { get; set; }
         public char charTest { get; set; }
         public decimal decimalTest { get; set; }
         public double doubleTest { get; set; }
@@ -13,7 +12,6 @@ namespace FlatFileParserUnitTests.Models
         public int id { get; set; }
         public int intTest { get; set; }
         public long longTest { get; set; }
-        public sbyte sbyteTest { get; set; }
         public short shortTest { get; set; }
         public string stringTest { get; set; }
         public uint uintTest { get; set; }
@@ -25,14 +23,12 @@ namespace FlatFileParserUnitTests.Models
             var model = obj as PrimitiveTypesModel;
             return model != null &&
                    boolTest == model.boolTest &&
-                   byteTest == model.byteTest &&
                    charTest == model.charTest &&
                    decimalTest == model.decimalTest &&
                    doubleTest == model.doubleTest &&
                    floatTest == model.floatTest &&
                    id == model.id &&
                    longTest == model.longTest &&
-                   sbyteTest == model.sbyteTest &&
                    shortTest == model.shortTest &&
                    stringTest == model.stringTest &&
                    uintTest == model.uintTest &&
@@ -44,14 +40,12 @@ namespace FlatFileParserUnitTests.Models
         {
             var hashCode = -422371933;
             hashCode = hashCode * -1521134295 + boolTest.GetHashCode();
-            hashCode = hashCode * -1521134295 + byteTest.GetHashCode();
             hashCode = hashCode * -1521134295 + charTest.GetHashCode();
             hashCode = hashCode * -1521134295 + decimalTest.GetHashCode();
             hashCode = hashCode * -1521134295 + doubleTest.GetHashCode();
             hashCode = hashCode * -1521134295 + floatTest.GetHashCode();
             hashCode = hashCode * -1521134295 + id.GetHashCode();
             hashCode = hashCode * -1521134295 + longTest.GetHashCode();
-            hashCode = hashCode * -1521134295 + sbyteTest.GetHashCode();
             hashCode = hashCode * -1521134295 + shortTest.GetHashCode();
             hashCode = hashCode * -1521134295 + EqualityComparer<string>.Default.GetHashCode(stringTest);
             hashCode = hashCode * -1521134295 + uintTest.GetHashCode();
